SPRING DYNAMIC MODULES FRAMEWORK CHANGELOG
==========================================
http://www.springframework.org/osgi

Changes in version 1.1.0 RC1 (2008-0x-yy)
-----------------------------------------

General
* removed unused osgi-core.jar from bundle archetype

Package org.springframework.osgi.config
* fixed localization problem in xml enumeration conversion 
* fixed listener double invocation caused by JDK 5 bridge methods

Package org.springframework.osgi.context
* refined AbstractOsgiBundleApplicationContext internal resource loader creation so that subclasses can override it
* improved internal namespace service handling
* improved AbstractOsgiBundleApplicationContext handling of ResourceLoader methods
* introduced ContextClassLoaderProvider interface as a strategy for customizing the application context thread context
  class loader
* removed ConfigurableOsgiBundleApplicationContext signature from OsgiBundleApplicationContextEvent
* introduced new importer waiting event hierarchy (org.springframework.osgi.service.importer.event package)
* improved handling of OSGi namespaces during shutdown

Package org.springframework.osgi.extender
* added support.scanning package to allow custom locations to be used for 'Spring-powered' bundles
* added setter for delegated application context creator in ConditionalApplicationContextCreator
* improved ApplicationContextConfiguration internal structure
* added type filtering behaviour inside the extender so only Spring-compatible bundles are scanned and managed
* removed internal usage of Thread.stop as it breaks the VM state
* improved bundle shutdown by using a simple thread executor (rather then one thread per bundle model) to increase
  scalability
* added BootstrappingDependencyEvent for notifying the pre-refresh dependency activities

Package org.springframework.osgi.io
* improved OsgiBundleResource#getFile() method when dealing with resources in expanded bundles