@@ -47,11 +47,10 @@
 		   </exclusions>
 		</dependency>
   
-	
 	    <dependency>
-            <groupId>org.springframework.osgi</groupId>
-            <artifactId>cglib-nodep.osgi</artifactId>
-            <version>2.1.3-SNAPSHOT</version>
+            <groupId>net.sourceforge.cglib</groupId>
+            <artifactId>com.springsource.net.sf.cglib</artifactId>
+            <version>2.1.3</version>
             <scope>provided</scope>
         </dependency> 
         
@@ -78,9 +77,9 @@
         </dependency> 
     	
     	<dependency>
-      		<groupId>org.springframework.osgi</groupId>
-      		<artifactId>aopalliance.osgi</artifactId>
-      		<version>1.0-SNAPSHOT</version>
+      		<groupId>org.aopalliance</groupId>
+      		<artifactId>com.springsource.org.aopalliance</artifactId>
+      		<version>1.0.0</version>
       		<scope>provided</scope>
     	</dependency>
 
