@@ -19,7 +19,6 @@ package org.springframework.osgi.iandt.web.taglib;
 import org.springframework.osgi.iandt.web.BaseWebIntegrationTest;
 import org.springframework.osgi.iandt.web.HttpClient;
 import org.springframework.osgi.iandt.web.HttpResponse;
-import org.springframework.osgi.test.platform.Platforms;
 
 /**
  * @author Costin Leau
