@@ -1,0 +1,26 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns:osgi="http://www.springframework.org/schema/osgi"
+	xsi:schemaLocation="
+		http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd
+		http://www.springframework.org/schema/osgi http://www.springframework.org/schema/osgi/spring-osgi.xsd">
+
+	<!-- set -->
+	<osgi:set interface="org.springframework.osgi.iandt.simpleservice.MyService" cardinality="1..N" id="serviceA" />
+
+	<!-- list -->
+	<osgi:list interface="org.springframework.osgi.iandt.tccl.TCCLService" cardinality="1..N"  id="serviceC" />
+
+	<!-- only one importer dependency exporter -->
+	<osgi:service id="exporterA" ref="map" auto-export="all-classes"/>
+
+	<bean id="map" class="java.util.HashMap" depends-on="serviceA"/>
+
+	<!-- multiple importer dependency importer -->
+	<osgi:service id="exporterB" ref="simple-bean" auto-export="all-classes" depends-on="serviceC"/>
+	
+	<bean id="simple-bean" class="org.springframework.osgi.iandt.servicedependency.SimpleBean" depends-on="serviceC">
+		<property name="property" ref="serviceA"/>
+	</bean>		
+</beans>
