@@ -39,12 +39,13 @@
   </properties>
   
   <dependencies>
+  
+    <!-- make junit a mandatory dependency -->
     <dependency>
-      <groupId>org.springframework.osgi</groupId>
-      <artifactId>junit.osgi</artifactId>
-      <version>3.8.2-SNAPSHOT</version>
+      <groupId>org.junit</groupId>
+      <artifactId>com.springsource.junit</artifactId>
+      <version>3.8.2</version>
     </dependency>
-      
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
@@ -63,9 +64,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.springframework.osgi</groupId>
-      <artifactId>asm.osgi</artifactId>
-      <version>2.2.3-SNAPSHOT</version>
+      <groupId>org.objectweb.asm</groupId>
+      <artifactId>com.springsource.org.objectweb.asm</artifactId>
+      <version>2.2.0</version>
     </dependency>
         
     <dependency>
