@@ -21,14 +21,14 @@
 #
 
 # versioning
-ignore.backport.version=3.1-SNAPSHOT
-ignore.junit.version=3.8.2-SNAPSHOT
+ignore.backport.version=3.1.0
+ignore.junit.version=3.8.2
 ignore.log4j.version=1.2.15-SNAPSHOT
 
 ignore.spring.version=2.5.5-SNAPSHOT
 ignore.spring.osgi.version=1.1.0-rc1-SNAPSHOT
-ignore.slf4j.version=1.4.3
-ignore.asm.version=2.2.3-SNAPSHOT
+ignore.slf4j.version=1.5.0
+ignore.asm.version=2.2.0
 
 # groupIds
 ignore.spring.groupId=org.springframework
@@ -44,19 +44,23 @@ ignore.slf4j.groupId=org.slf4j
 # dependencies
 
 # junit
-${ignore.spring.osgi.groupId},junit.osgi,${ignore.junit.version}=
+org.junit,com.springsource.junit,${ignore.junit.version}=
 # log4j
 ${ignore.spring.osgi.groupId},log4j.osgi,${ignore.log4j.version}=
 # slf4j (commons-logging API)
-${ignore.slf4j.groupId},slf4j-api,${ignore.slf4j.version}=
-${ignore.slf4j.groupId},jcl104-over-slf4j,${ignore.slf4j.version}=
-${ignore.slf4j.groupId},slf4j-log4j12,${ignore.slf4j.version}=
+#${ignore.slf4j.groupId},slf4j-api,${ignore.slf4j.version}=
+#${ignore.slf4j.groupId},slf4j-log4j12,${ignore.slf4j.version}=
+#${ignore.slf4j.groupId},jcl104-over-slf4j,${ignore.slf4j.version}=
+# slf4j (BRITS)
+${ignore.slf4j.groupId},com.springsource.slf4j.api,${ignore.slf4j.version}=
+${ignore.slf4j.groupId},com.springsource.slf4j.log4j,${ignore.slf4j.version}=
+${ignore.slf4j.groupId},com.springsource.slf4j.org.apache.commons.logging,${ignore.slf4j.version}=
 # aop alliance
-${ignore.spring.osgi.groupId},aopalliance.osgi,1.0-SNAPSHOT=
+org.aopalliance,com.springsource.org.aopalliance,1.0.0=
 # asm
-${ignore.spring.osgi.groupId},asm.osgi,${ignore.asm.version}=
+org.objectweb.asm,com.springsource.org.objectweb.asm,${ignore.asm.version}=
 # backport concurrent
-${ignore.spring.osgi.groupId},backport-util-concurrent.osgi,${ignore.backport.version}=-15
+edu.emory.mathcs.backport,com.springsource.edu.emory.mathcs.backport,${ignore.backport.version}=-15
 
 # spring libs
 ${ignore.spring.groupId},spring-beans,${ignore.spring.version}=
