@@ -7,6 +7,9 @@ Changes in version 1.1.0 RC1 (2008-0x-yy)
 
 General
 * removed unused osgi-core.jar from bundle archetype
+* migrated some of the project dependencies to SpringSource Bundle Repository
+* removed internal package org.springframework.osgi.service.dependency (and associated dependencies) from the public 
+  API
 
 Package org.springframework.osgi.config
 * fixed localization problem in xml enumeration conversion 
@@ -21,6 +24,7 @@ Package org.springframework.osgi.context
 * removed ConfigurableOsgiBundleApplicationContext signature from OsgiBundleApplicationContextEvent
 * introduced new importer waiting event hierarchy (org.springframework.osgi.service.importer.event package)
 * improved handling of OSGi namespaces during shutdown
+* added exporter/importer transitive dependency tracking
 
 Package org.springframework.osgi.extender
 * added support.scanning package to allow custom locations to be used for 'Spring-powered' bundles
@@ -45,6 +49,8 @@ Package org.springframework.osgi.service
 * introduced ServiceReferenceProxy interface (available through ImportedOsgiServiceProxy) for accessing the native 
   service reference
 * OsgiServiceFactoryBean performs type check validation on given interfaces at startup
+* removed internal 'dependency' subpackage from the public API
+* significantly improved exporter/importer transitive dependency tracking for both single and multi service proxies
 
 Package org.springframework.osgi.util
 * fixed internal handling of nested beans when discovering transitive dependencies of a bean
